--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -5,6 +5,8 @@
 
     <uses-sdk android:minSdkVersion="10" />
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
@@ -22,6 +24,8 @@
             </intent-filter>
         </activity>
         
+        <activity android:name="Info"
+			android:configChanges="keyboardHidden"></activity>
     </application>
 
 </manifest>
